[package]
name = "defy-rs"
version = "0.1.0"
edition = "2018"

[dependencies]
anyhow = "1.0.44"
axum = { version = "0.2.8", features = ["headers"] }
cookie = "0.15.1"
futures-util = "0.3.17"
headers = "0.3.5"
http = "0.2.5"
lazy_static = "1.4.0"
pretty_env_logger = "0.4.0"
rspotify = { version = "0.11.2", default-features = false, features = ["client-reqwest", "reqwest-rustls-tls"] }
serde = "1.0.130"
serde_json = "1.0.68"
tokio = { version = "1.12.0", features = ["macros", "rt-multi-thread"] }
url = "2.2.2"
