[package]
name = "defy-rs"
version = "0.1.0"
edition = "2018"

[dependencies]
anyhow = "1.0.44"
axum = "0.2.8"
http = "0.2.5"
pretty_env_logger = "0.4.0"
rspotify = { version = "0.11.2", default-features = false, features = ["client-reqwest", "reqwest-rustls-tls"] }
serde = "1.0.130"
tokio = { version = "1.12.0", features = ["macros", "rt-multi-thread"] }
