[package]
name = "defy"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.3.4"
color-eyre = "0.5.11"
futures-util = "0.3.18"
itertools = "0.10.1"
linfa = "0.5.0"
linfa-trees = "0.5.0"
maud = "0.23.0"
ndarray = "0.15.4"
rspotify = { version = "0.11.2", default-features = false, features = ["client-reqwest", "reqwest-rustls-tls"] }
serde = "1.0.130"
serde_json = "1.0.71"
sled = "0.34.7"
tokio = { version = "1.14.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.1.2", features = ["trace", "fs"] }
tracing = "0.1.29"
tracing-error = "0.1.2"
tracing-subscriber = { version = "0.2.25", features = ["env-filter"] }
webbrowser = "0.5.5"

[patch.crates-io]
rspotify-http = { git = "https://github.com/Michcioperz/rspotify", branch = "defy-patched" }
rspotify-model = { git = "https://github.com/Michcioperz/rspotify", branch = "defy-patched" }
